--- a/index.html
+++ b/index.html
@@ -1,18 +1,28 @@
+<!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
         <link rel="stylesheet" href="index.css">
         <link rel="stylesheet" href="basic.css">
+        <script src="main.js"></script>
     </head>
     <body>
-        <div class="container">
-            <div class="header">HEADER</div>
+        <div class="inhalt">
+            <div class="color">
+            <div class="header">City Shapes</div>
             <div class="search">
-                <div class="content">
-                <div class="nest"><p> Gib die Nummer von der Rückseite deiner Karte ein.</p></div>
-                <div class="nest"><input type="text" name="firstname" value="Nummer"></div>
-                </div>
+                <div class="nest"><p> Gib die Nummer von der Rückseite deiner Karte ein:</p></div>
+                <form id="subPageForm">
+                      <div class="input-group mb-3">
+                            <input type="text" class="form-control" name="subPageId" placeholder="Nummer" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                            <div class="input-group-append">
+                              <button onclick="loadSubPage()" class="btn btn-outline-secondary" type="button">icon</button>
+                            </div>
+                     </div>
+                    </form>
             </div>
-            <div class="footer">FOOTER</div>
+                <div class="footer"></div>
+             </div>
         </div>
     </body>
 </html>
