--- a/f49.html
+++ b/f49.html
@@ -8,8 +8,7 @@
     </head>
     <body>
         <div class="inhalt">
-            <div class="color">
-            <div class="headersmall">City Shapes</div>
+            <div class="headersmall color">City Shapes</div>
             <div class="searchsmall">
                     <form id="subPageForm">
                             <div class="input-group mb-3">
@@ -20,18 +19,15 @@
                            </div>
                           </form>
             </div>
-        </div>
             <div class="map">
                     <img src="p/f49.jpg" class="img-fluid" alt="Responsive image">
             </div>
-            <div class="color">
-            <div  class="text">
+            <div  class="text color">
                 <h1>Friedhof</h1>
                 <p>
                     Der alte Südfriedhof wurde 1563 als Pestfriedhof vor den Toren der Stadt gebaut und ist der älteste noch erhaltene Münchner Friedhof. Seine ungewöhliche Form besteht aus dem 1818–1821 errichteten Teil, dessen Grundriss  die Form eines Sarkophags hat und von königlichen Hofbaumeister Gustav Vorherr, unter Mitwirkung des Gartenarchitekten Friedrich Ludwig von Sckell errichtet wurde. 1840 wurde der des bis dahin Zentralfriedhof genannten Alten Südlichen Friedhof um den süddlichen Teil erweitert.</p>
                     </div>
-            <div class="footer"> 
-            </div>
+            <div class="footer color"> 
             </div>
         </div>
         </div>
