--- a/f58.html
+++ b/f58.html
@@ -4,12 +4,10 @@
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
         <link rel="stylesheet" href="index.css">
         <link rel="stylesheet" href="basic.css">
-        <script src="main.js"></script>
     </head>
     <body>
         <div class="inhalt">
-            <div class="color">
-            <div class="headersmall">City Shapes</div>
+            <div class="color headersmall">City Shapes</div>
             <div class="searchsmall">
                     <form id="subPageForm">
                             <div class="input-group mb-3">
@@ -20,17 +18,14 @@
                            </div>
                           </form>
             </div>
-        </div>
             <div class="map">
                     <img src="p/f58.jpg" class="img-fluid" alt="Responsive image">
             </div>
-            <div class="color">
-            <div  class="text">
+            <div  class="text color">
                 <h1>Friedhof</h1>
                 <p> der neue Südfriedhof  wurde 1977 von Landschaftsarchitekt Gottfried Hansjakob angelegt. In einem Auszug zum Konzept heißt es: „Friedhöfe in demokratischer Gesellschaft müssen nach Meinung der Verfasser grundsätzlich neutral ausgestaltet werden. Im öffentlichen Friedhof sollten Menschen aller Weltanschauungen gleiche Voraussetzungen zur Bestattung ihrer Toten haben.“</p>
                     </div>
-            <div class="footer"> 
-            </div>
+            <div  class="footer color"> 
             </div>
         </div>
         </div>
