--- a/f58.html
+++ b/f58.html
@@ -15,7 +15,7 @@
                             <div class="input-group mb-3">
                                   <input type="text" class="form-control" name="subPageId" placeholder="neue Nummer" aria-label="Recipient's username" aria-describedby="basic-addon2">
                                   <div class="input-group-append">
-                                    <button onclick="loadSubPage()" class="btn btn-outline-secondary" type="button">icon</button>
+                                        <button onclick="loadSubPage()" class="btn btn-outline-secondary" type="button"><i class="fas fa-search fa-5x"></i></button>
                                   </div>
                            </div>
                           </form>
