--- a/f49.html
+++ b/f49.html
@@ -1,37 +1,49 @@
 <!DOCTYPE html>
 <html>
-    <head>
-            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-        <link rel="stylesheet" href="index.css">
-        <link rel="stylesheet" href="basic.css">
-        <script src="main.js"></script>
-    </head>
-    <body>
-        <div class="inhalt">
-                <div class="headersmall color">
-                        <a href="https://francismiriam.github.io/cityshapes/">City Shapes</a>
-                        </div> 
-            <div class="searchsmall">
-                    <form id="subPageForm">
-                            <div class="input-group mb-3">
-                                  <input type="text" class="form-control" name="subPageId" placeholder="neue Nummer" aria-label="Recipient's username" aria-describedby="basic-addon2">
-                                  <div class="input-group-append">
-                                        <button onclick="loadSubPage()" class="btn btn-outline-secondary" type="button"><i class="fas fa-search"></i></button>
-                                  </div>
-                           </div>
-                          </form>
-            </div>
-            <div class="map">
-                    <img src="p/f49.jpg" class="img-fluid" alt="Responsive image">
-            </div>
-            <div  class="text color">
-                <h1>Friedhof</h1>
-                <p>
-                    Der alte Südfriedhof wurde 1563 als Pestfriedhof vor den Toren der Stadt gebaut und ist der älteste noch erhaltene Münchner Friedhof. Seine ungewöhliche Form besteht aus dem 1818–1821 errichteten Teil, dessen Grundriss  die Form eines Sarkophags hat und von königlichen Hofbaumeister Gustav Vorherr, unter Mitwirkung des Gartenarchitekten Friedrich Ludwig von Sckell errichtet wurde. 1840 wurde der des bis dahin Zentralfriedhof genannten Alten Südlichen Friedhof um den süddlichen Teil erweitert.</p>
+
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="basic.css">
+    <script src="main.js"></script>
+</head>
+
+<body>
+    <div class="inhalt">
+        <div class="headersmall color">
+            <a href="https://francismiriam.github.io/cityshapes/">City Shapes</a>
+        </div>
+        <div class="searchsmall">
+            <form id="subPageForm">
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" name="subPageId" placeholder="neue Nummer" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                    <div class="input-group-append">
+                        <button onclick="loadSubPage()" class="btn btn-outline-secondary" type="button">
+                            <i class="fas fa-search fa-5x"></i>
+                        </button>
                     </div>
-            <div class="footer color"> 
-            </div>
+                </div>
+            </form>
         </div>
+        <div class="map">
+            <img src="p/f49.jpg" class="img-fluid" alt="Responsive image">
         </div>
-    </body>
+        <div class="text color">
+            <h1>Friedhof</h1>
+            <p>
+                Der alte Südfriedhof wurde 1563 als Pestfriedhof vor den Toren der Stadt gebaut und ist der älteste noch erhaltene Münchner
+                Friedhof. Seine ungewöhliche Form besteht aus dem 1818–1821 errichteten Teil, dessen Grundriss die Form eines
+                Sarkophags hat und von königlichen Hofbaumeister Gustav Vorherr, unter Mitwirkung des Gartenarchitekten Friedrich
+                Ludwig von Sckell errichtet wurde. 1840 wurde der des bis dahin Zentralfriedhof genannten Alten Südlichen
+                Friedhof um den süddlichen Teil erweitert.</p>
+        </div>
+        <div class="footer color">
+        </div>
+    </div>
+    </div>
+</body>
+
 </html>
