--- a/f58.html
+++ b/f58.html
@@ -1,35 +1,46 @@
 <!DOCTYPE html>
 <html>
-    <head>
-            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-        <link rel="stylesheet" href="index.css">
-        <link rel="stylesheet" href="basic.css">
-    </head>
-    <body>
-        <div class="inhalt">
-                <div class="headersmall color">
-                        <a href="https://francismiriam.github.io/cityshapes/">City Shapes</a>
-                        </div> 
-            <div class="searchsmall">
-                    <form id="subPageForm">
-                            <div class="input-group mb-3">
-                                  <input type="text" class="form-control" name="subPageId" placeholder="neue Nummer" aria-label="Recipient's username" aria-describedby="basic-addon2">
-                                  <div class="input-group-append">
-                                        <button onclick="loadSubPage()" class="btn btn-outline-secondary" type="button"><i class="fas fa-search fa-5x"></i></button>
-                                  </div>
-                           </div>
-                          </form>
-            </div>
-            <div class="map">
-                    <img src="p/f58.jpg" class="img-fluid" alt="Responsive image">
-            </div>
-            <div  class="text color">
-                <h1>Friedhof</h1>
-                <p> der neue Südfriedhof  wurde 1977 von Landschaftsarchitekt Gottfried Hansjakob angelegt. In einem Auszug zum Konzept heißt es: „Friedhöfe in demokratischer Gesellschaft müssen nach Meinung der Verfasser grundsätzlich neutral ausgestaltet werden. Im öffentlichen Friedhof sollten Menschen aller Weltanschauungen gleiche Voraussetzungen zur Bestattung ihrer Toten haben.“</p>
+
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="basic.css">
+</head>
+
+<body>
+    <div class="inhalt">
+        <div class="headersmall color">
+            <a href="https://francismiriam.github.io/cityshapes/">City Shapes</a>
+        </div>
+        <div class="searchsmall">
+            <form id="subPageForm">
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" name="subPageId" placeholder="neue Nummer" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                    <div class="input-group-append">
+                        <button onclick="loadSubPage()" class="btn btn-outline-secondary" type="button">
+                            <i class="fas fa-search fa-5x"></i>
+                        </button>
                     </div>
-            <div  class="footer color"> 
-            </div>
+                </div>
+            </form>
         </div>
+        <div class="map">
+            <img src="p/f58.jpg" class="img-fluid" alt="Responsive image">
         </div>
-    </body>
+        <div class="text color">
+            <h1>Friedhof</h1>
+            <p> der neue Südfriedhof  wurde 1977 von Landschaftsarchitekt Gottfried Hansjakob angelegt. In einem Auszug zum Konzept
+                heißt es: „Friedhöfe in demokratischer Gesellschaft müssen nach Meinung der Verfasser grundsätzlich neutral
+                ausgestaltet werden. Im öffentlichen Friedhof sollten Menschen aller Weltanschauungen gleiche Voraussetzungen
+                zur Bestattung ihrer Toten haben.“</p>
+        </div>
+        <div class="footer color">
+        </div>
+    </div>
+    </div>
+</body>
+
 </html>
