--- a/index.html
+++ b/index.html
@@ -1,32 +1,41 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-        <link rel="stylesheet" href="index.css">
-        <link rel="stylesheet" href="basic.css">
-        <script src="main.js"></script>
-    </head>
-    <body>
-        <div class="inhalt">
-           
-            <div class="header color">
+
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="basic.css">
+    <script src="main.js"></script>
+</head>
+
+<body>
+    <div class="inhalt">
+
+        <div class="header color">
             <a href="https://francismiriam.github.io/cityshapes/">City Shapes</a>
-            </div> 
-            <!-- <div class="icon color"> <i class="fas fa-search fa-10x"></i></div> -->
-            <div class=" color">
-                <div class="nest "><p> Gib die Nummer von der Rückseite deiner Karte ein:</p></div>
-                <form id="subPageForm">
-                      <div class="input-group mb-3">
-                            <input type="text" class="form-control" name="subPageId" placeholder="Nummer" aria-label="Recipient's username" aria-describedby="basic-addon2">
-                            <div class="input-group-append">
-                              <button onclick="loadSubPage()" class="btn btn-outline-secondary" type="button"> <i class="fas fa-search fa-5x"></i></button>
-                            </div>
-                     </div>
-                    </form>
-            </div>
-                <div class="footer color"></div>
-             
         </div>
-    </body>
+        <!-- <div class="icon color"> <i class="fas fa-search fa-10x"></i></div> -->
+        <div class=" color">
+            <div class="nest ">
+                <p> Gib die Nummer von der Rückseite deiner Karte ein:</p>
+            </div>
+            <form id="subPageForm">
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" name="subPageId" placeholder="Nummer" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                    <div class="input-group-append">
+                        <button onclick="loadSubPage()" class="btn btn-outline-secondary" type="button">
+                            <i class="fas fa-search fa-5x"></i>
+                        </button>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div class="footer color"></div>
+
+    </div>
+</body>
+
 </html>
