--- a/f58.html
+++ b/f58.html
@@ -8,8 +8,8 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="basic.css">
+    <script src="main.js"></script>
 </head>
-
 <body>
     <div class="inhalt">
         <div class="headersmall color">
