--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <!-- <div class="icon color"> <i class="fas fa-search fa-10x"></i></div> -->
             <div class=" color">
                 <div class="nest "><p> Gib die Nummer von der Rückseite deiner Karte ein:</p></div>
+                <div class="searchsmall">
                 <form id="subPageForm" onSubmit="loadSubPage(); return false;" action="#">
                       <div class="input-group mb-3">
                             <input type="text" class="form-control" name="subPageId" placeholder="Nummer" aria-label="Recipient's username" aria-describedby="basic-addon2">
@@ -24,6 +25,7 @@
                             </div>
                      </div>
                     </form>
+                    </div>
             </div>
                 <div class="footer color"></div>
              
