--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             </div> 
             <!-- <div class="icon color"> <i class="fas fa-search fa-10x"></i></div> -->
             <div class=" color">
-                <div class="nest "><p> Gib die Nummer von der Rückseite deiner Karte ein:</p></div>
-                <div class="searchsmall">
+                <div class="nest "><p>1, Finde die zusammenpassenden Puzzelteile <br> <br> 2, Gib die Nummer von der Rückseite der Karten ein:</p></div>
+                <div class="search">
                 <form id="subPageForm" onSubmit="loadSubPage(); return false;" action="#">
                       <div class="input-group mb-3">
                             <input type="text" class="form-control" name="subPageId" placeholder="Nummer" aria-label="Recipient's username" aria-describedby="basic-addon2">
