--- a/f58.html
+++ b/f58.html
@@ -26,14 +26,12 @@
                       </form>
         </div>
         <div class="map">
-            <img src="p/f58.jpg" class="img-fluid" alt="Responsive image">
+            <img src="p/map09.jpg" class="img-fluid" alt="Responsive image">
         </div>
         <div class="text color">
             <h1>Friedhof</h1>
-            <p> der neue Südfriedhof  wurde 1977 von Landschaftsarchitekt Gottfried Hansjakob angelegt. In einem Auszug zum Konzept
-                heißt es: „Friedhöfe in demokratischer Gesellschaft müssen nach Meinung der Verfasser grundsätzlich neutral
-                ausgestaltet werden. Im öffentlichen Friedhof sollten Menschen aller Weltanschauungen gleiche Voraussetzungen
-                zur Bestattung ihrer Toten haben.“</p>
+            <p> der neue Südfriedhof wurde 1977 von Landschaftsarchitekt Gottfried Hansjakob angelegt und ist als einziger Münchner Friedhof hügelig und eine ungewöhnliche Wegführung. In einem Auszug zum Konzept heißt es: „Friedhöfe in demokratischer Gesellschaft müssen nach Meinung der Verfasser grundsätzlich neutral ausgestaltet werden. Im öffentlichen Friedhof sollten Menschen aller Weltanschauungen gleiche Voraussetzungen zur Bestattung ihrer Toten haben.“
+                </p>
         </div>
         <div class="footer color">
         </div>
