--- a/p59.html
+++ b/p59.html
@@ -25,12 +25,12 @@
                       </form>
         </div>
         <div class="map">
-            <img src="p/map10.jpg" class="img-fluid" alt="Responsive image">
+            <img src="p/map02.jpg" class="img-fluid" alt="Responsive image">
         </div>
         <div class="text color">
-            <h1>Friedhof</h1>
+            <h1>Parkplatz</h1>
             <p>
-                    Der alte Südfriedhof wurde 1563 als Pestfriedhof vor den Toren der Stadt gebaut und ist der älteste noch erhaltene Münchner Friedhof. Seine ungewöhnliche Form besteht aus dem 1818–1821 errichteten Teil, dessen Grundriss die Form eines Sarkophags hat und von königlichen Hofbaumeister Gustav Vorherr, unter Mitwirkung des Gartenarchitekten Friedrich Ludwig von Sckell errichtet wurde. 1840 wurde der bis dahin Zentralfriedhof genannten Alten Südlichen Friedhof um den südlichen Teil erweitert.</p>
+                    Der Olympiapark in München war der Veranstaltungsort der XX. Olympischen Sommerspiele 1972. Im Westen des Parks liegt die Parkhafe. Sie umfasst 4.000 Parkplätze und damit einen großen Teil der Fläche im Olympiapark. Jeden Freitag und Samstag findet dort ein großer Flohmarkt statt, es handeln rund 450 Anbieter. Der Flohmarkt ist als einer der wenigen auch im Winter.</p>
         </div>
         <div class="footer color">
         </div>
