--- a/w51.html
+++ b/w51.html
@@ -25,12 +25,12 @@
                       </form>
         </div>
         <div class="map">
-            <img src="p/map10.jpg" class="img-fluid" alt="Responsive image">
+            <img src="p/map06.jpg" class="img-fluid" alt="Responsive image">
         </div>
         <div class="text color">
-            <h1>Friedhof</h1>
+            <h1>Wasser</h1>
             <p>
-                    Der alte Südfriedhof wurde 1563 als Pestfriedhof vor den Toren der Stadt gebaut und ist der älteste noch erhaltene Münchner Friedhof. Seine ungewöhnliche Form besteht aus dem 1818–1821 errichteten Teil, dessen Grundriss die Form eines Sarkophags hat und von königlichen Hofbaumeister Gustav Vorherr, unter Mitwirkung des Gartenarchitekten Friedrich Ludwig von Sckell errichtet wurde. 1840 wurde der bis dahin Zentralfriedhof genannten Alten Südlichen Friedhof um den südlichen Teil erweitert.</p>
+                    Der Wasserverlauf im Tierpark Hellabrunn ist ein ausgeklügeltes System das die verschiedenen Geozonen versorgt. Der Tierpark Hellabrunn wurde 1911 gegründet und ist seit 1928 der erste Geozoo der Welt, in dem die Tiere nach Kontinenten geordnet leben. Somit ergibt sich ein Rundgang durch die Tierwelten und aller Kontinente.</p>
         </div>
         <div class="footer color">
         </div>
