--- a/g52.html
+++ b/g52.html
@@ -25,12 +25,14 @@
                       </form>
         </div>
         <div class="map">
-            <img src="p/map10.jpg" class="img-fluid" alt="Responsive image">
+            <img src="p/map05.jpg" class="img-fluid" alt="Responsive image">
         </div>
         <div class="text color">
-            <h1>Friedhof</h1>
+            <h1> Grünfläche</h1>
             <p>
-                    Der alte Südfriedhof wurde 1563 als Pestfriedhof vor den Toren der Stadt gebaut und ist der älteste noch erhaltene Münchner Friedhof. Seine ungewöhnliche Form besteht aus dem 1818–1821 errichteten Teil, dessen Grundriss die Form eines Sarkophags hat und von königlichen Hofbaumeister Gustav Vorherr, unter Mitwirkung des Gartenarchitekten Friedrich Ludwig von Sckell errichtet wurde. 1840 wurde der bis dahin Zentralfriedhof genannten Alten Südlichen Friedhof um den südlichen Teil erweitert.</p>
+                   
+Der Gärtnerplatz ist Mittelpunkt des Gärtnerplatzviertels und wurde 1860 vom deutscher Gartenarchitekt Max Kolb gestaltet. Dieser erlange großes Ansehen für die Gestalltung zahlreicher Park und Schloßanlagen so wie für seine Leitung der städtischen Anlagen Münchens. Er erwirkte eine umfangreichen Begrünung und Verschönerung Münchens plädierte für wohnungsnahe Grünanlagen.
+</p>
         </div>
         <div class="footer color">
         </div>
