--- a/g57.html
+++ b/g57.html
@@ -25,12 +25,12 @@
                       </form>
         </div>
         <div class="map">
-            <img src="p/map10.jpg" class="img-fluid" alt="Responsive image">
+            <img src="p/map04.jpg" class="img-fluid" alt="Responsive image">
         </div>
         <div class="text color">
-            <h1>Friedhof</h1>
+            <h1>Grünfläche</h1>
             <p>
-                    Der alte Südfriedhof wurde 1563 als Pestfriedhof vor den Toren der Stadt gebaut und ist der älteste noch erhaltene Münchner Friedhof. Seine ungewöhnliche Form besteht aus dem 1818–1821 errichteten Teil, dessen Grundriss die Form eines Sarkophags hat und von königlichen Hofbaumeister Gustav Vorherr, unter Mitwirkung des Gartenarchitekten Friedrich Ludwig von Sckell errichtet wurde. 1840 wurde der bis dahin Zentralfriedhof genannten Alten Südlichen Friedhof um den südlichen Teil erweitert.</p>
+                    Der Alte Botanische Garten liegt am Lenbachplatz und wurde 1804 bis 1812 nach Plänen des Landschaftsarchitekten Friedrich Ludwig von Sckell angelegt. Dieser war auch an der landschaftlichen Gestaltung des Alten südlichen Friedhofs beteiligt. Geplant ist der Alte Botanische Garten in Form des Buchstaben D. Nachdem 1914 der Neue Botanische Garten vor den damaligen Toren Münchens in Nymphenburg angelegt worden war, wurde der Alte Botanische Garten zu einem Park umgestaltet. Heute hat er einen schlechten Ruf, da der Park bei Drogensüchtigen und Obdachlosen beliebt ist.</p>
         </div>
         <div class="footer color">
         </div>
