--- a/s56.html
+++ b/s56.html
@@ -25,12 +25,12 @@
                       </form>
         </div>
         <div class="map">
-            <img src="p/map10.jpg" class="img-fluid" alt="Responsive image">
+            <img src="p/map07.jpg" class="img-fluid" alt="Responsive image">
         </div>
         <div class="text color">
-            <h1>Friedhof</h1>
-            <p>
-                    Der alte Südfriedhof wurde 1563 als Pestfriedhof vor den Toren der Stadt gebaut und ist der älteste noch erhaltene Münchner Friedhof. Seine ungewöhnliche Form besteht aus dem 1818–1821 errichteten Teil, dessen Grundriss die Form eines Sarkophags hat und von königlichen Hofbaumeister Gustav Vorherr, unter Mitwirkung des Gartenarchitekten Friedrich Ludwig von Sckell errichtet wurde. 1840 wurde der bis dahin Zentralfriedhof genannten Alten Südlichen Friedhof um den südlichen Teil erweitert.</p>
+            <h1>Spielplatz</h1>
+            <p>Der Spielplatz im Weißenseepark in Giesing lässt sich schon von weitem durch seinen zum Teil blauen Boden erkennen. Er wurde im Zuge des Programms „Stadt- und Ortsteile mit besonderem Entwicklungsbedarf – die Soziale Stadt“ aufgewertet und umgestaltet. Der Spielbereich besteht aus mehreren Inseln, welche ein barrierefreier Weg verbindet so wie Rollstuhlgerechte Spielgeräte und Nestschaukeln.
+                    Genauso wie ein Wasserspielplatz als auch ein Naturholz Klettergerüst.</p>
         </div>
         <div class="footer color">
         </div>
