--- a/s65.html
+++ b/s65.html
@@ -25,12 +25,12 @@
                       </form>
         </div>
         <div class="map">
-            <img src="p/map10.jpg" class="img-fluid" alt="Responsive image">
+            <img src="p/map08.jpg" class="img-fluid" alt="Responsive image">
         </div>
         <div class="text color">
-            <h1>Friedhof</h1>
+            <h1>Spielplatz</h1>
             <p>
-                    Der alte Südfriedhof wurde 1563 als Pestfriedhof vor den Toren der Stadt gebaut und ist der älteste noch erhaltene Münchner Friedhof. Seine ungewöhnliche Form besteht aus dem 1818–1821 errichteten Teil, dessen Grundriss die Form eines Sarkophags hat und von königlichen Hofbaumeister Gustav Vorherr, unter Mitwirkung des Gartenarchitekten Friedrich Ludwig von Sckell errichtet wurde. 1840 wurde der bis dahin Zentralfriedhof genannten Alten Südlichen Friedhof um den südlichen Teil erweitert.</p>
+                    Der Quartiersplatz Theresienhöhe auf dem ehemaligen Messegelände ist 2002 aus einem Kunstwettbewerb hervorgegangen. Die Gestaltung von Architektin Catherine Venart Landschaftsarchitekturbüro Topotek1 und der Kölner Künstlerin Rosemarie Trockel, spielgelt die Züge, die unter dem Betondeckel verkehren, wieder. Er hat eine Fläche von rund 16.800 Quadratmetern und ist in drei Teile geteilt: Liege- und Spielwiese, Dünenlandschaft und die Bewegungsfläche mit dunklem Basaltsplitt. Die „Dünenlandschaft“ kunststoffbeschichtete, multifunktionale Wellenlandschaft aus Tartan mit Mulden angelegt die mit sandfarbenem Quarzkies befüllt wurden.</p>
         </div>
         <div class="footer color">
         </div>
