--- a/w41.html
+++ b/w41.html
@@ -25,12 +25,12 @@
                       </form>
         </div>
         <div class="map">
-            <img src="p/map10.jpg" class="img-fluid" alt="Responsive image">
+            <img src="p/map01.jpg" class="img-fluid" alt="Responsive image">
         </div>
         <div class="text color">
-            <h1>Friedhof</h1>
+            <h1>Wasser</h1>
             <p>
-                    Der alte Südfriedhof wurde 1563 als Pestfriedhof vor den Toren der Stadt gebaut und ist der älteste noch erhaltene Münchner Friedhof. Seine ungewöhnliche Form besteht aus dem 1818–1821 errichteten Teil, dessen Grundriss die Form eines Sarkophags hat und von königlichen Hofbaumeister Gustav Vorherr, unter Mitwirkung des Gartenarchitekten Friedrich Ludwig von Sckell errichtet wurde. 1840 wurde der bis dahin Zentralfriedhof genannten Alten Südlichen Friedhof um den südlichen Teil erweitert.</p>
+                    Der Nymphenburger Kanal versorgt den Schlosspark Nymphenburg mit Wasser aus der Würm. Der Kanal wurde 1701–1703 von Kurfürst Max Emanuel angelegt. Der Kanal fließt aus Pasing kommend in einer geraden Linie von der Kirche St. Wolfgang in Pipping bis zum Nymphenburger Schloß. Danach Teilt er sich: weiter gerade fließt der Schlosskanal in Richtung Neuhausen bis zum Hubertusbrunnen. Vo dem Schloss biegt der zweite Kanal in ost-nordöstlicher Richtung schräg von dem ab und verläuft in Richtung Olympiapark und endet nach insgesamt rund 8 km im Schwabinger Bach im Englischen Garten.</p>
         </div>
         <div class="footer color">
         </div>
