--- a/f49.html
+++ b/f49.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
         crossorigin="anonymous">
@@ -9,20 +10,23 @@
     <link rel="stylesheet" href="basic.css">
     <script src="main.js"></script>
 </head>
+
 <body>
     <div class="inhalt">
         <div class="headersmall color">
             <a href="https://francismiriam.github.io/cityshapes/">City Shapes</a>
         </div>
         <div class="searchsmall">
-                <form id="subPageForm" onSubmit="loadSubPage(); return false;" action="#">
-                        <div class="input-group mb-3">
-                              <input type="text" class="form-control" name="subPageId" placeholder="Nummer" aria-label="Recipient's username" aria-describedby="basic-addon2">
-                              <div class="input-group-append">
-                                <button type="submit" class="btn btn-outline-secondary"> <i class="fas fa-search fa-5x"></i></button>
-                              </div>
-                       </div>
-                      </form>
+            <form id="subPageForm" onSubmit="loadSubPage(); return false;" action="#">
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" name="subPageId" placeholder="Nummer" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                    <div class="input-group-append">
+                        <button type="submit" class="btn btn-outline-secondary">
+                            <i class="fas fa-search fa-5x"></i>
+                        </button>
+                    </div>
+                </div>
+            </form>
         </div>
         <div class="map">
             <img src="p/map10.jpg" class="img-fluid" alt="Responsive image">
@@ -30,11 +34,17 @@
         <div class="text color">
             <h1>Friedhof</h1>
             <p>
-                    Der alte Südfriedhof wurde 1563 als Pestfriedhof vor den Toren der Stadt gebaut und ist der älteste noch erhaltene Münchner Friedhof. Seine ungewöhnliche Form besteht aus dem 1818–1821 errichteten Teil, dessen Grundriss die Form eines Sarkophags hat und von königlichen Hofbaumeister Gustav Vorherr, unter Mitwirkung des Gartenarchitekten Friedrich Ludwig von Sckell errichtet wurde. 1840 wurde der bis dahin Zentralfriedhof genannten Alten Südlichen Friedhof um den südlichen Teil erweitert.</p>
+                Der alte Südfriedhof wurde 1563 als Pestfriedhof vor den Toren der Stadt gebaut und ist der älteste noch erhaltene Münchner
+                Friedhof. Seine ungewöhnliche Form besteht aus dem 1818–1821 errichteten Teil, dessen Grundriss die Form
+                eines Sarkophags hat und von königlichen Hofbaumeister Gustav Vorherr, unter Mitwirkung des Gartenarchitekten
+                Friedrich Ludwig von Sckell errichtet wurde. 1840 wurde der Friedhof, der bis dahin der Zentralfriedhof war umbenannt und 
+             um einen südlichen Teil erweitert.
+            </p>
         </div>
         <div class="footer color">
         </div>
     </div>
     </div>
 </body>
+
 </html>
