--- a/f58.html
+++ b/f58.html
@@ -10,28 +10,35 @@
     <link rel="stylesheet" href="basic.css">
     <script src="main.js"></script>
 </head>
+
 <body>
     <div class="inhalt">
         <div class="headersmall color">
             <a href="https://francismiriam.github.io/cityshapes/">City Shapes</a>
         </div>
         <div class="searchsmall">
-                <form id="subPageForm" onSubmit="loadSubPage(); return false;" action="#">
-                        <div class="input-group mb-3">
-                              <input type="text" class="form-control" name="subPageId" placeholder="Nummer" aria-label="Recipient's username" aria-describedby="basic-addon2">
-                              <div class="input-group-append">
-                                <button type="submit" class="btn btn-outline-secondary"> <i class="fas fa-search fa-5x"></i></button>
-                              </div>
-                       </div>
-                      </form>
+            <form id="subPageForm" onSubmit="loadSubPage(); return false;" action="#">
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" name="subPageId" placeholder="Nummer" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                    <div class="input-group-append">
+                        <button type="submit" class="btn btn-outline-secondary">
+                            <i class="fas fa-search fa-5x"></i>
+                        </button>
+                    </div>
+                </div>
+            </form>
         </div>
         <div class="map">
             <img src="p/map09.jpg" class="img-fluid" alt="Responsive image">
         </div>
         <div class="text color">
             <h1>Friedhof</h1>
-            <p> der neue Südfriedhof wurde 1977 von Landschaftsarchitekt Gottfried Hansjakob angelegt und ist als einziger Münchner Friedhof hügelig und eine ungewöhnliche Wegführung. In einem Auszug zum Konzept heißt es: „Friedhöfe in demokratischer Gesellschaft müssen nach Meinung der Verfasser grundsätzlich neutral ausgestaltet werden. Im öffentlichen Friedhof sollten Menschen aller Weltanschauungen gleiche Voraussetzungen zur Bestattung ihrer Toten haben.“
-                </p>
+            <p>
+                Der neue Südfriedhof wurde 1977 von Landschaftsarchitekt Gottfried Hansjakob angelegt und ist als einziger Münchner Friedhof
+                hügelig und hat eine ungewöhnliche Wegführung. In einem Auszug zum Konzept heißt es: „Friedhöfe in demokratischer
+                Gesellschaft müssen nach Meinung der Verfasser grundsätzlich neutral ausgestaltet werden. Im öffentlichen
+                Friedhof sollten Menschen aller Weltanschauungen gleiche Voraussetzungen zur Bestattung ihrer Toten haben.“
+            </p>
         </div>
         <div class="footer color">
         </div>
