--- a/p46.html
+++ b/p46.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
         crossorigin="anonymous">
@@ -9,31 +10,40 @@
     <link rel="stylesheet" href="basic.css">
     <script src="main.js"></script>
 </head>
+
 <body>
     <div class="inhalt">
         <div class="headersmall color">
             <a href="https://francismiriam.github.io/cityshapes/">City Shapes</a>
         </div>
         <div class="searchsmall">
-                <form id="subPageForm" onSubmit="loadSubPage(); return false;" action="#">
-                        <div class="input-group mb-3">
-                              <input type="text" class="form-control" name="subPageId" placeholder="Nummer" aria-label="Recipient's username" aria-describedby="basic-addon2">
-                              <div class="input-group-append">
-                                <button type="submit" class="btn btn-outline-secondary"> <i class="fas fa-search fa-5x"></i></button>
-                              </div>
-                       </div>
-                      </form>
+            <form id="subPageForm" onSubmit="loadSubPage(); return false;" action="#">
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" name="subPageId" placeholder="Nummer" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                    <div class="input-group-append">
+                        <button type="submit" class="btn btn-outline-secondary">
+                            <i class="fas fa-search fa-5x"></i>
+                        </button>
+                    </div>
+                </div>
+            </form>
         </div>
         <div class="map">
             <img src="p/map03.jpg" class="img-fluid" alt="Responsive image">
         </div>
         <div class="text color">
             <h1>Parkplatz</h1>
-            <p>Das ungewöhnliche Parkhaus der Allianz Arena wurde mitsamt der Arena selbst vom Architekturbüro Herzog & de Meuron entworfen und fasst 9.800 Autos. Besucher*innen laufen über das Dach des Parkdecks auf geschwungenen Wegen zur Arena hinauf die erst am höchsten Punkt komplett zu sehen ist. Die Architekten planten diesen Anstieg so das die Arena zunächst nicht zu sehen ist und dann als schwebende weiser Puff auftaucht.</p>
+            <p>
+                Das ungewöhnliche Parkhaus der Allianz Arena wurde mitsamt der Arena selbst vom Architekturbüro Herzog & de Meuron entworfen
+                und fasst 9.800 Autos. Besucher*innen laufen über das Dach des Parkdecks auf geschwungenen Wegen zur Arena
+                hinauf die erst am höchsten Punkt komplett zu sehen ist. Die Architekten planten diesen Anstieg so das die
+                Arena zunächst nicht zu sehen ist und dann als schwebende weiser Puff auftaucht.
+            </p>
         </div>
         <div class="footer color">
         </div>
     </div>
     </div>
 </body>
+
 </html>
