--- a/s56.html
+++ b/s56.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
         crossorigin="anonymous">
@@ -9,32 +10,41 @@
     <link rel="stylesheet" href="basic.css">
     <script src="main.js"></script>
 </head>
+
 <body>
     <div class="inhalt">
         <div class="headersmall color">
             <a href="https://francismiriam.github.io/cityshapes/">City Shapes</a>
         </div>
         <div class="searchsmall">
-                <form id="subPageForm" onSubmit="loadSubPage(); return false;" action="#">
-                        <div class="input-group mb-3">
-                              <input type="text" class="form-control" name="subPageId" placeholder="Nummer" aria-label="Recipient's username" aria-describedby="basic-addon2">
-                              <div class="input-group-append">
-                                <button type="submit" class="btn btn-outline-secondary"> <i class="fas fa-search fa-5x"></i></button>
-                              </div>
-                       </div>
-                      </form>
+            <form id="subPageForm" onSubmit="loadSubPage(); return false;" action="#">
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" name="subPageId" placeholder="Nummer" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                    <div class="input-group-append">
+                        <button type="submit" class="btn btn-outline-secondary">
+                            <i class="fas fa-search fa-5x"></i>
+                        </button>
+                    </div>
+                </div>
+            </form>
         </div>
         <div class="map">
             <img src="p/map07.jpg" class="img-fluid" alt="Responsive image">
         </div>
         <div class="text color">
             <h1>Spielplatz</h1>
-            <p>Der Spielplatz im Weißenseepark in Giesing lässt sich schon von weitem durch seinen zum Teil blauen Boden erkennen. Er wurde im Zuge des Programms „Stadt- und Ortsteile mit besonderem Entwicklungsbedarf – die Soziale Stadt“ aufgewertet und umgestaltet. Der Spielbereich besteht aus mehreren Inseln, welche ein barrierefreier Weg verbindet so wie Rollstuhlgerechte Spielgeräte und Nestschaukeln.
-                    Genauso wie ein Wasserspielplatz als auch ein Naturholz Klettergerüst.</p>
+            <p>
+                Der Spielplatz im Weißenseepark in Giesing lässt sich schon von weitem durch seinen zum Teil blauen Boden erkennen. Er wurde
+                im Zuge des Programms „Stadt- und Ortsteile mit besonderem Entwicklungsbedarf – die Soziale Stadt“ aufgewertet
+                und umgestaltet. Der Spielbereich besteht aus mehreren Inseln, welche ein barrierefreier Weg verbindet so
+                wie Rollstuhlgerechte Spielgeräte und Nestschaukeln. Außerdem gibt es einen Wasserspielplatz so wie ein Naturholz
+                Klettergerüst.
+            </p>
         </div>
         <div class="footer color">
         </div>
     </div>
     </div>
 </body>
+
 </html>
