--- a/g52.html
+++ b/g52.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
         crossorigin="anonymous">
@@ -9,20 +10,23 @@
     <link rel="stylesheet" href="basic.css">
     <script src="main.js"></script>
 </head>
+
 <body>
     <div class="inhalt">
         <div class="headersmall color">
             <a href="https://francismiriam.github.io/cityshapes/">City Shapes</a>
         </div>
         <div class="searchsmall">
-                <form id="subPageForm" onSubmit="loadSubPage(); return false;" action="#">
-                        <div class="input-group mb-3">
-                              <input type="text" class="form-control" name="subPageId" placeholder="Nummer" aria-label="Recipient's username" aria-describedby="basic-addon2">
-                              <div class="input-group-append">
-                                <button type="submit" class="btn btn-outline-secondary"> <i class="fas fa-search fa-5x"></i></button>
-                              </div>
-                       </div>
-                      </form>
+            <form id="subPageForm" onSubmit="loadSubPage(); return false;" action="#">
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" name="subPageId" placeholder="Nummer" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                    <div class="input-group-append">
+                        <button type="submit" class="btn btn-outline-secondary">
+                            <i class="fas fa-search fa-5x"></i>
+                        </button>
+                    </div>
+                </div>
+            </form>
         </div>
         <div class="map">
             <img src="p/map05.jpg" class="img-fluid" alt="Responsive image">
@@ -30,13 +34,16 @@
         <div class="text color">
             <h1> Grünfläche</h1>
             <p>
-                   
-Der Gärtnerplatz ist Mittelpunkt des Gärtnerplatzviertels und wurde 1860 vom deutscher Gartenarchitekt Max Kolb gestaltet. Dieser erlange großes Ansehen für die Gestalltung zahlreicher Park und Schloßanlagen so wie für seine Leitung der städtischen Anlagen Münchens. Er erwirkte eine umfangreichen Begrünung und Verschönerung Münchens plädierte für wohnungsnahe Grünanlagen.
-</p>
+                Der Gärtnerplatz ist Mittelpunkt des Gärtnerplatzviertels und wurde 1860 vom deutscher Gartenarchitekt Max Kolb gestaltet.
+                Dieser erlangte großes Ansehen für die Gestalltung zahlreicher Park- und Schloßanlagen so wie für seine Leitung
+                der städtischen Anlagen Münchens. Er erwirkte eine umfangreichen Begrünung und Verschönerung Münchens und plädierte
+                für wohnungsnahe Grünanlagen.
+            </p>
         </div>
         <div class="footer color">
         </div>
     </div>
     </div>
 </body>
+
 </html>
