--- a/g57.html
+++ b/g57.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
         crossorigin="anonymous">
@@ -9,20 +10,23 @@
     <link rel="stylesheet" href="basic.css">
     <script src="main.js"></script>
 </head>
+
 <body>
     <div class="inhalt">
         <div class="headersmall color">
             <a href="https://francismiriam.github.io/cityshapes/">City Shapes</a>
         </div>
         <div class="searchsmall">
-                <form id="subPageForm" onSubmit="loadSubPage(); return false;" action="#">
-                        <div class="input-group mb-3">
-                              <input type="text" class="form-control" name="subPageId" placeholder="Nummer" aria-label="Recipient's username" aria-describedby="basic-addon2">
-                              <div class="input-group-append">
-                                <button type="submit" class="btn btn-outline-secondary"> <i class="fas fa-search fa-5x"></i></button>
-                              </div>
-                       </div>
-                      </form>
+            <form id="subPageForm" onSubmit="loadSubPage(); return false;" action="#">
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" name="subPageId" placeholder="Nummer" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                    <div class="input-group-append">
+                        <button type="submit" class="btn btn-outline-secondary">
+                            <i class="fas fa-search fa-5x"></i>
+                        </button>
+                    </div>
+                </div>
+            </form>
         </div>
         <div class="map">
             <img src="p/map04.jpg" class="img-fluid" alt="Responsive image">
@@ -30,11 +34,18 @@
         <div class="text color">
             <h1>Grünfläche</h1>
             <p>
-                    Der Alte Botanische Garten liegt am Lenbachplatz und wurde 1804 bis 1812 nach Plänen des Landschaftsarchitekten Friedrich Ludwig von Sckell angelegt. Dieser war auch an der landschaftlichen Gestaltung des Alten südlichen Friedhofs beteiligt. Geplant ist der Alte Botanische Garten in Form des Buchstaben D. Nachdem 1914 der Neue Botanische Garten vor den damaligen Toren Münchens in Nymphenburg angelegt worden war, wurde der Alte Botanische Garten zu einem Park umgestaltet. Heute hat er einen schlechten Ruf, da der Park bei Drogensüchtigen und Obdachlosen beliebt ist.</p>
+                Der Alte Botanische Garten liegt am Lenbachplatz und wurde 1804 bis 1812 nach Plänen des Landschaftsarchitekten Friedrich
+                Ludwig von Sckell angelegt. Dieser war auch an der landschaftlichen Gestaltung des alten Südfriedhofs
+                beteiligt. Geplant ist der Alte Botanische Garten in Form des Buchstaben D. Nachdem 1914 der Neue Botanische
+                Garten vor den damaligen Toren Münchens in Nymphenburg angelegt worden war, wurde der Alte Botanische Garten
+                zu einem Park umgestaltet. Heute hat er einen schlechten Ruf, da der Park bei Drogensüchtigen und Obdachlosen
+                beliebt ist.
+            </p>
         </div>
         <div class="footer color">
         </div>
     </div>
     </div>
 </body>
+
 </html>
