--- a/p59.html
+++ b/p59.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
         crossorigin="anonymous">
@@ -9,20 +10,23 @@
     <link rel="stylesheet" href="basic.css">
     <script src="main.js"></script>
 </head>
+
 <body>
     <div class="inhalt">
         <div class="headersmall color">
             <a href="https://francismiriam.github.io/cityshapes/">City Shapes</a>
         </div>
         <div class="searchsmall">
-                <form id="subPageForm" onSubmit="loadSubPage(); return false;" action="#">
-                        <div class="input-group mb-3">
-                              <input type="text" class="form-control" name="subPageId" placeholder="Nummer" aria-label="Recipient's username" aria-describedby="basic-addon2">
-                              <div class="input-group-append">
-                                <button type="submit" class="btn btn-outline-secondary"> <i class="fas fa-search fa-5x"></i></button>
-                              </div>
-                       </div>
-                      </form>
+            <form id="subPageForm" onSubmit="loadSubPage(); return false;" action="#">
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" name="subPageId" placeholder="Nummer" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                    <div class="input-group-append">
+                        <button type="submit" class="btn btn-outline-secondary">
+                            <i class="fas fa-search fa-5x"></i>
+                        </button>
+                    </div>
+                </div>
+            </form>
         </div>
         <div class="map">
             <img src="p/map02.jpg" class="img-fluid" alt="Responsive image">
@@ -30,11 +34,16 @@
         <div class="text color">
             <h1>Parkplatz</h1>
             <p>
-                    Der Olympiapark in München war der Veranstaltungsort der XX. Olympischen Sommerspiele 1972. Im Westen des Parks liegt die Parkhafe. Sie umfasst 4.000 Parkplätze und damit einen großen Teil der Fläche im Olympiapark. Jeden Freitag und Samstag findet dort ein großer Flohmarkt statt, es handeln rund 450 Anbieter. Der Flohmarkt ist als einer der wenigen auch im Winter.</p>
+                Der Olympiapark in München war der Veranstaltungsort der XX. Olympischen Sommerspiele 1972. Im Westen des Parks liegt die
+                Parkharfe sie ist wegen Ihrer Form nach dem Musikinstrument benannt. Der Parkplatz umfasst 4.000 Parkplätze und ist damit eine signifikant große Fläche im Olympiapark. Jeden Freitag
+                und Samstag findet dort ein großer Flohmarkt statt mit rund 450 Anbieter*innen. Er ist einer
+                der wenigen, die auch im Winter stattfinden.
+            </p>
         </div>
         <div class="footer color">
         </div>
     </div>
     </div>
 </body>
+
 </html>
