--- a/s65.html
+++ b/s65.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
         crossorigin="anonymous">
@@ -9,20 +10,23 @@
     <link rel="stylesheet" href="basic.css">
     <script src="main.js"></script>
 </head>
+
 <body>
     <div class="inhalt">
         <div class="headersmall color">
             <a href="https://francismiriam.github.io/cityshapes/">City Shapes</a>
         </div>
         <div class="searchsmall">
-                <form id="subPageForm" onSubmit="loadSubPage(); return false;" action="#">
-                        <div class="input-group mb-3">
-                              <input type="text" class="form-control" name="subPageId" placeholder="Nummer" aria-label="Recipient's username" aria-describedby="basic-addon2">
-                              <div class="input-group-append">
-                                <button type="submit" class="btn btn-outline-secondary"> <i class="fas fa-search fa-5x"></i></button>
-                              </div>
-                       </div>
-                      </form>
+            <form id="subPageForm" onSubmit="loadSubPage(); return false;" action="#">
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" name="subPageId" placeholder="Nummer" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                    <div class="input-group-append">
+                        <button type="submit" class="btn btn-outline-secondary">
+                            <i class="fas fa-search fa-5x"></i>
+                        </button>
+                    </div>
+                </div>
+            </form>
         </div>
         <div class="map">
             <img src="p/map08.jpg" class="img-fluid" alt="Responsive image">
@@ -30,11 +34,18 @@
         <div class="text color">
             <h1>Spielplatz</h1>
             <p>
-                    Der Quartiersplatz Theresienhöhe auf dem ehemaligen Messegelände ist 2002 aus einem Kunstwettbewerb hervorgegangen. Die Gestaltung von Architektin Catherine Venart Landschaftsarchitekturbüro Topotek1 und der Kölner Künstlerin Rosemarie Trockel, spielgelt die Züge, die unter dem Betondeckel verkehren, wieder. Er hat eine Fläche von rund 16.800 Quadratmetern und ist in drei Teile geteilt: Liege- und Spielwiese, Dünenlandschaft und die Bewegungsfläche mit dunklem Basaltsplitt. Die „Dünenlandschaft“ kunststoffbeschichtete, multifunktionale Wellenlandschaft aus Tartan mit Mulden angelegt die mit sandfarbenem Quarzkies befüllt wurden.</p>
+                Der Quartiersplatz Theresienhöhe auf dem ehemaligen Messegelände ist 2002 aus einem Kunstwettbewerb hervorgegangen. Die Gestaltung
+                von Architektin Catherine Venart vom Landschaftsarchitekturbüro Topotek1 und der Kölner Künstlerin Rosemarie
+                Trockel, spielgelt die Züge, die unter dem Betondeckel verkehren, wieder. Er hat eine Fläche von rund 16.800
+                Quadratmetern und ist in drei Teile geteilt: Liege- und Spielwiese, Dünenlandschaft und die Bewegungsfläche
+                mit dunklem Basaltsplitt. Die „Dünenlandschaft“ ist eine kunststoffbeschichtete, multifunktionale Wellenlandschaft
+                aus Tartan mit Mulden angelegt die mit sandfarbenem Quarzkies befüllt wurden.
+            </p>
         </div>
         <div class="footer color">
         </div>
     </div>
     </div>
 </body>
+
 </html>
