--- a/w41.html
+++ b/w41.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
         crossorigin="anonymous">
@@ -9,20 +10,23 @@
     <link rel="stylesheet" href="basic.css">
     <script src="main.js"></script>
 </head>
+
 <body>
     <div class="inhalt">
         <div class="headersmall color">
             <a href="https://francismiriam.github.io/cityshapes/">City Shapes</a>
         </div>
         <div class="searchsmall">
-                <form id="subPageForm" onSubmit="loadSubPage(); return false;" action="#">
-                        <div class="input-group mb-3">
-                              <input type="text" class="form-control" name="subPageId" placeholder="Nummer" aria-label="Recipient's username" aria-describedby="basic-addon2">
-                              <div class="input-group-append">
-                                <button type="submit" class="btn btn-outline-secondary"> <i class="fas fa-search fa-5x"></i></button>
-                              </div>
-                       </div>
-                      </form>
+            <form id="subPageForm" onSubmit="loadSubPage(); return false;" action="#">
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" name="subPageId" placeholder="Nummer" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                    <div class="input-group-append">
+                        <button type="submit" class="btn btn-outline-secondary">
+                            <i class="fas fa-search fa-5x"></i>
+                        </button>
+                    </div>
+                </div>
+            </form>
         </div>
         <div class="map">
             <img src="p/map01.jpg" class="img-fluid" alt="Responsive image">
@@ -30,11 +34,18 @@
         <div class="text color">
             <h1>Wasser</h1>
             <p>
-                    Der Nymphenburger Kanal versorgt den Schlosspark Nymphenburg mit Wasser aus der Würm. Der Kanal wurde 1701–1703 von Kurfürst Max Emanuel angelegt. Der Kanal fließt aus Pasing kommend in einer geraden Linie von der Kirche St. Wolfgang in Pipping bis zum Nymphenburger Schloß. Danach Teilt er sich: weiter gerade fließt der Schlosskanal in Richtung Neuhausen bis zum Hubertusbrunnen. Vo dem Schloss biegt der zweite Kanal in ost-nordöstlicher Richtung schräg von dem ab und verläuft in Richtung Olympiapark und endet nach insgesamt rund 8 km im Schwabinger Bach im Englischen Garten.</p>
+                Der Nymphenburger Kanal versorgt den Schlosspark Nymphenburg mit Wasser aus der Würm. Der Kanal wurde 1701–1703 von Kurfürst
+                Max Emanuel angelegt. Der Kanal fließt aus Pasing kommend in einer geraden Linie von der Kirche St. Wolfgang
+                in Pipping bis zum Nymphenburger Schloß. Danach Teilt er sich: weiter gerade fließt der Schlosskanal in Richtung
+                Neuhausen bis zum Hubertusbrunnen. Vo dem Schloss biegt der zweite Kanal in ost-nordöstlicher Richtung schräg
+                von dem ab und verläuft in Richtung Olympiapark und endet nach insgesamt rund 8 km im Schwabinger Bach im
+                Englischen Garten.
+            </p>
         </div>
         <div class="footer color">
         </div>
     </div>
     </div>
 </body>
+
 </html>
