--- a/w51.html
+++ b/w51.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
         crossorigin="anonymous">
@@ -9,20 +10,23 @@
     <link rel="stylesheet" href="basic.css">
     <script src="main.js"></script>
 </head>
+
 <body>
     <div class="inhalt">
         <div class="headersmall color">
             <a href="https://francismiriam.github.io/cityshapes/">City Shapes</a>
         </div>
         <div class="searchsmall">
-                <form id="subPageForm" onSubmit="loadSubPage(); return false;" action="#">
-                        <div class="input-group mb-3">
-                              <input type="text" class="form-control" name="subPageId" placeholder="Nummer" aria-label="Recipient's username" aria-describedby="basic-addon2">
-                              <div class="input-group-append">
-                                <button type="submit" class="btn btn-outline-secondary"> <i class="fas fa-search fa-5x"></i></button>
-                              </div>
-                       </div>
-                      </form>
+            <form id="subPageForm" onSubmit="loadSubPage(); return false;" action="#">
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" name="subPageId" placeholder="Nummer" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                    <div class="input-group-append">
+                        <button type="submit" class="btn btn-outline-secondary">
+                            <i class="fas fa-search fa-5x"></i>
+                        </button>
+                    </div>
+                </div>
+            </form>
         </div>
         <div class="map">
             <img src="p/map06.jpg" class="img-fluid" alt="Responsive image">
@@ -30,11 +34,15 @@
         <div class="text color">
             <h1>Wasser</h1>
             <p>
-                    Der Wasserverlauf im Tierpark Hellabrunn ist ein ausgeklügeltes System das die verschiedenen Geozonen versorgt. Der Tierpark Hellabrunn wurde 1911 gegründet und ist seit 1928 der erste Geozoo der Welt, in dem die Tiere nach Kontinenten geordnet leben. Somit ergibt sich ein Rundgang durch die Tierwelten und aller Kontinente.</p>
+                Der Wasserverlauf im Tierpark Hellabrunn ist ein ausgeklügeltes System das die verschiedenen Geozonen versorgt. Der Tierpark
+                Hellabrunn wurde 1911 gegründet und ist seit 1928 der erste Geozoo der Welt, in dem die Tiere nach Kontinenten
+                geordnet leben. Somit ergibt sich ein Rundgang durch die Tierwelten und aller Kontinente.
+            </p>
         </div>
         <div class="footer color">
         </div>
     </div>
     </div>
 </body>
+
 </html>
